[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/Boss.gd" type="Script" id=2]
[ext_resource path="res://images/Enemy.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 44.1937
height = 1.6474

[node name="Boss" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Flames" parent="." index="0"]
position = Vector2( 0, -60 )
scale = Vector2( 1, 1 )
frame = 1

[node name="Sprite" parent="." index="1"]
scale = Vector2( 1, 1 )
frames = SubResource( 1 )
animation = "default"

[node name="Tween" type="Tween" parent="Sprite" index="0"]

[node name="CollisionShape2D" parent="." index="3"]
shape = SubResource( 2 )

[node name="InvincibilityTimer" type="Timer" parent="." index="10"]
wait_time = 0.6
one_shot = true
[connection signal="tween_completed" from="Sprite/Tween" to="." method="_on_inv_flash_completed"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
